--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "ace": "^1.3.0",
     "bulma": "^0.7.1",
+    "lodash.throttle": "^4.1.1",
     "monaco-editor": "^0.14.2",
     "monaco-themes": "^0.2.3"
   },
   "devDependencies": {
+    "@types/es6-shim": "^0.31.37",
     "autoprefixer": "^9.1.1",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
@@ -33,6 +35,8 @@
     "monaco-editor-webpack-plugin": "^1.5.1",
     "optimize-css-assets-webpack-plugin": "^5.0.0",
     "style-loader": "^0.22.1",
+    "ts-loader": "^4.4.2",
+    "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
