--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ace": "^1.3.0",
-    "bulma": "^0.7.1",
     "lodash.throttle": "^4.1.1",
-    "monaco-editor": "^0.14.2",
-    "monaco-emacs": "../Vim",
-    "monaco-themes": "^0.2.3"
+    "monaco-editor": "0.14.3",
+    "monaco-emacs": "../monaco-emacs/local",
+    "monaco-themes": "^0.2.3",
+    "monaco-vim": "^0.0.1"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.37",
