--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "monaco-editor": "0.14.3",
     "monaco-emacs": "../monaco-emacs/local",
     "monaco-themes": "^0.2.3",
-    "monaco-vim": "^0.0.1"
+    "monaco-vim": "0.0.2"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.37",
