--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "lodash.throttle": "^4.1.1",
+    "monaco-ace-tokenizer": "^0.1.0",
     "monaco-editor": "0.14.3",
     "monaco-emacs": "../monaco-emacs/local",
     "monaco-themes": "^0.2.3",
