--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "dependencies": {
     "monaco-ace-tokenizer": "^0.1.0",
     "monaco-editor": "0.14.3",
-    "monaco-emacs": "../monaco-emacs/local",
+    "monaco-emacs": "^0.1.0",
     "monaco-themes": "^0.2.3",
-    "monaco-vim": "0.0.2"
+    "monaco-vim": "^0.0.4"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.37",
@@ -31,6 +31,7 @@
     "mini-css-extract-plugin": "^0.4.1",
     "monaco-editor-webpack-plugin": "^1.5.1",
     "style-loader": "^0.22.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5"
