--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "monaco-editor": "0.15.5",
     "monaco-emacs": "^0.1.0",
     "monaco-themes": "^0.2.3",
-    "monaco-vim": "^0.0.8"
+    "monaco-vim": "0.0.9"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.37",
