--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "monaco-ace-tokenizer": "^0.1.0",
+    "monaco-ace-tokenizer": "^0.1.1",
     "monaco-editor": "0.15.5",
-    "monaco-emacs": "^0.1.0",
-    "monaco-themes": "^0.2.3",
-    "monaco-vim": "0.0.9"
+    "monaco-emacs": "^0.1.3",
+    "monaco-themes": "^0.2.5",
+    "monaco-vim": "0.0.13"
   },
   "devDependencies": {
     "@types/es6-shim": "^0.31.37",
@@ -27,6 +27,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
+    "firebase-tools": "^6.10.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "monaco-editor-webpack-plugin": "^1.5.1",
