--- a/package.json
+++ b/package.json
@@ -7,34 +7,32 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --host=0.0.0.0 --port=8080",
     "clean": "rm -rf dist",
-    "build": "npm run clean && webpack --mode production"
+    "build": "yarn run clean && webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "monaco-ace-tokenizer": "^0.1.1",
-    "monaco-editor": "0.15.5",
+    "monaco-editor": "0.18.1",
     "monaco-emacs": "^0.2.0",
     "monaco-themes": "0.3.3",
-    "monaco-vim": "0.0.13"
+    "monaco-vim": "0.1.4"
   },
   "devDependencies": {
-    "@types/es6-shim": "^0.31.37",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "@babel/core": "^7.7.2",
+    "babel-loader": "^8.0.6",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "css-loader": "^1.0.0",
-    "firebase-tools": "^6.10.0",
+    "@babel/preset-env": "^7.7.1",
+    "css-loader": "^3.2.0",
+    "firebase-tools": "^7.7.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
-    "monaco-editor-webpack-plugin": "^1.5.1",
-    "style-loader": "^0.22.1",
-    "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5"
+    "mini-css-extract-plugin": "^0.8.0",
+    "monaco-editor-webpack-plugin": "^1.7.0",
+    "style-loader": "^1.0.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
