--- a/package.json
+++ b/package.json
@@ -14,23 +14,24 @@
   "license": "ISC",
   "dependencies": {
     "monaco-ace-tokenizer": "^0.1.1",
-    "monaco-editor": "^0.18.1",
+    "monaco-editor": "^0.19.0",
     "monaco-emacs": "^0.2.0",
     "monaco-themes": "^0.3.3",
-    "monaco-vim": "^0.1.5"
+    "monaco-vim": "^0.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.7.1",
     "babel-loader": "^8.0.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^3.2.0",
+    "file-loader": "^5.0.2",
     "firebase-tools": "^7.7.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "monaco-editor-webpack-plugin": "^1.7.0",
+    "monaco-editor-webpack-plugin": "^1.8.0",
     "style-loader": "^1.0.0",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
