--- a/firebase.json
+++ b/firebase.json
@@ -3,6 +3,7 @@
     "public": "dist",
     "ignore": [
       "firebase.json",
+      "package.json",
       "**/.*",
       "**/node_modules/**"
     ]
