--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -10,13 +10,20 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
         with:
-          node-version: "20.x"
+          version: 9
+          run_install: false
+      - uses: actions/setup-node@v4
+        name: Install node.js
+        with:
+          node-version: "22.x"
           registry-url: "https://registry.npmjs.org"
-      - run: yarn
-      - run: yarn build
+          cache: 'pnpm'
+      - run: pnpm i
+      - run: pnpm build
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: "${{ secrets.GITHUB_TOKEN }}"
