--- a/package.json
+++ b/package.json
@@ -7,34 +7,33 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --mode development --host=0.0.0.0 --port=8080",
     "clean": "rm -rf dist",
-    "build": "yarn run clean && webpack --mode production"
+    "build": "pnpm clean && webpack --mode production"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "monaco-ace-tokenizer": "^0.2.3",
-    "monaco-editor": "^0.44.0",
+    "monaco-editor": "^0.51.0",
     "monaco-emacs": "^0.3.0",
     "monaco-themes": "^0.4.4",
     "monaco-vim": "^0.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.3",
+    "@babel/core": "^7.26.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.23.3",
-    "babel-loader": "^9.1.3",
-    "babel-plugin-module-resolver": "^5.0.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "css-loader": "^6.8.1",
+    "@babel/preset-env": "^7.26.0",
+    "babel-loader": "^9.2.1",
+    "babel-plugin-module-resolver": "^5.0.2",
+    "css-loader": "^7.1.2",
     "file-loader": "^6.2.0",
-    "firebase-tools": "^12.9.1",
-    "html-webpack-plugin": "^5.5.3",
-    "mini-css-extract-plugin": "^2.7.6",
+    "firebase-tools": "^13.24.2",
+    "html-webpack-plugin": "^5.6.3",
+    "mini-css-extract-plugin": "^2.9.2",
     "monaco-editor-webpack-plugin": "^7.1.0",
-    "style-loader": "^3.3.3",
-    "webpack": "^5.89.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.96.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
-  }
+    "webpack-dev-server": "^5.1.0"
+ }
 }
